style: add pizza-amount style in 'add to cart' btn in PizzaCard, fix: set min/max width for pizza name container in cart -> (aligns earch cart items spacing), style:add transform:translate 1px to :active btn click(add-to-cart & cart btns)

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -53,6 +53,10 @@ body {
   border-radius: 30px;
   cursor: pointer;
   transition: all $duration ease-in-out;
+
+  &:active {
+    transform: translateY(1px); // TODO: REFACTOR btn:active?
+  }
 }
 
 .btn--primary {
@@ -98,5 +102,10 @@ body {
     background-color: $orange;
     color: white;
     font-weight: 700;
+  }
+
+  &:active {
+    background-color: darken($orange, 8%); // TODO: REFACTOR btn:active?
+    transform: translateY(1px);
   }
 }
