--- a/src/scss/components/_pizza-card.scss
+++ b/src/scss/components/_pizza-card.scss
@@ -92,6 +92,29 @@
       &:hover {
         color: white;
         background-color: $orange;
+        .pizza-amount {
+          color: $orange;
+          background: white;
+        }
+      }
+
+      &:active {
+        background-color: darken($orange, 8%); // TODO: REFACTOR btn:active?
+        transform: translateY(1px);
+      }
+
+      // circle item amount (inside 'add' button)
+      .pizza-amount {
+        display: inline-block;
+        background: $orange;
+        color: white;
+        font-weight: 600;
+        border-radius: 50%;
+        width: 22px;
+        height: 22px;
+        line-height: 23px;
+        margin-left: 6px;
+        font-size: 13px;
       }
     }
   }
